tests/compile-fail/compile_fail__unknown_instr_name.snap
---
source: tests/compile-fail.rs
expression: stderr
---
error: unknown function 'iMadeThisUpYesterday'
   ┌─ <input>:27:7
   │
27 │       iMadeThisUpYesterday(0, 0, 0);  
   │       ^^^^^^^^^^^^^^^^^^^^ not found in this scope


